<resources>
    <string name="app_name">Media Converter</string>
    <string name="navigation_drawer_open">Open navigation menu</string>
    <string name="navigation_drawer_close">Close navigation menu</string>
    <string name="nav_header_app_title">Media Converter Pro</string>
    <string name="notification_channel_converter">Converter Service</string>
    <string name="notification_channel_converter_des">Notification show when service is running in background</string>
    <string name="converter_service_running">Converter service running</string>
    <string name="converter_service_running_with_speed">Converter service running: %s</string>
    <string name="nav_preset_commands">Preset commands</string>
    <string name="nav_job_manager">Job manager</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_feedback">Help &amp; feedback</string>
    <string name="empty_job_list">No Job found\nTap (+) button to create a new one.</string>
    <string name="empty_selected_files">No files selected</string>
    <string name="loading_job_list">Loading jobs…</string>
    <string name="clear_finish_jobs">Clear finished jobs</string>
    <string name="file_list_load_error_message">Load file list failed</string>
    <string name="retry">Retry</string>
    <string name="fork_on_github">Fork on Github</string>
    <string name="licenses">Open source licenses</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="app_version_format">Version %s</string>
    <string name="permission_not_granted">Permission denied, action was cancelled</string>
    <string name="job_output_location">Location: %s</string>
    <string name="share_file_subject">Sharing File…</string>
    <string name="share_chooser">Share to</string>
    <string name="open_file_chooser">Open file</string>
    <string name="open_folder_chooser">Open folder: %s</string>
    <string name="unknown_file_path">Unknown file path</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="dialog_confirm_delete_job_output">Delete Job and file</string>
    <string name="dialog_confirm_delete_job_output_mess">Do you want to delete this job and its file? %s\nThis action can\'t UNDO!</string>
    <string name="network_error">Network error</string>
    <string name="rate_us_title">Rate us</string>
    <string name="rate_us_message">This app is useful, isn\'t it? Rate us 5 stars to help it reach out more people, thank you!</string>
    <string name="rate_us_love_it">Love it</string>
    <string name="rate_us_not_now">Not now</string>
    <string name="rate_us_never">Never</string>
    <string name="rate_us">Rate us</string>
    <string name="reload">Reload</string>
    <string name="switch_job_dialog_title">Select job</string>
    <string name="create_new_folder">New folder</string>
    <string name="permission_denied">Permission denied</string>
    <string name="hint_type_folder_name">Folder name</string>
    <string name="hint_file_name">File name</string>
    <string name="folder_exists">Folder exists</string>
    <string name="file_exists">File name exists</string>
    <string name="create_folder_failed">Create folder failed, please check folder name.</string>
    <string name="create_folder_success">Create folder \'%s\' success</string>
    <string name="select">Select</string>
    <string name="pick_file">Pick file</string>
    <string name="pick_folder">Pick folder</string>
    <string name="user_denied_permission">Permissions were not granted. Please click retry and grant permission to access this folder.</string>
    <string name="go_to_sd_card">Go to SD card</string>
    <string name="go_to_phone_storage">Go to phone\'s storage</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="edit_text_uri_hint">Enter file path or an URL</string>
    <string name="output_folder_hint">Output folder (click to edit)</string>
    <string name="output_file_name_hint">Output file name</string>
    <string name="exit_to_job_manager">Exit to Job Manager</string>
    <string name="convert_other_files">Convert other files</string>
    <string name="error_can_not_create_output_file">Can\'t create output file, please try again or change output folder</string>
    <string name="error_input_too_short">Input too short</string>
    <string name="error_file_not_exists">This path doesn\'t exists</string>
    <string name="error_not_a_file">This is not a file</string>
    <string name="error_invalid_url">Invalid URL</string>
    <string name="error_output_folder_empty">Please select output folder</string>
    <string name="error_file_name_empty">Please set file name</string>
    <string name="dialog_error_file_exists">File name exists</string>
    <string name="dialog_error_file_exists_message">The file name \"%s\" already exists.\nDo you want to override or rename it?</string>
    <string name="action_override">Override</string>
    <string name="action_rename">Rename</string>
    <string name="preset_command_convert_mp3_title">Convert MP3</string>
    <string name="preset_command_convert_mp3_des">Convert any video or audio file to MP3 format easily</string>
    <string name="preset_command_convert_aac_title">Convert AAC</string>
    <string name="preset_command_convert_aac_des">Advanced Audio Coding (AAC) designed to be the successor of the MP3 format</string>
    <string name="preset_command_convert_flac_title">Convert FLAC</string>
    <string name="preset_command_convert_flac_des">Converts without any loss in quality with FLAC encoder - Free lossless Audio Codec</string>
    <string name="preset_command_convert_mp4_title">Convert MP4</string>
    <string name="preset_command_convert_mp4_des">Convert any video file to MP4 format easily using MPEG-4 encoder</string>
    <string name="add_job_message">New job has been added to queue!</string>
    <string name="ac_view">View</string>
    <string name="dialog_confirm_quit_title">Do you want to exit?</string>
    <string name="dialog_confirm_quit_message">Your settings won\'t be saved</string>
    <string name="encoder_header">Encoder:</string>
    <string name="bitrate_type_header">Bitrate type:</string>
    <string name="bitrate_type_vbr">VBR</string>
    <string name="bitrate_type_cbr">CBR (faster)</string>
    <string name="bitrate_header">Bitrate:</string>
    <string name="compression_level_header">Compression level:</string>
    <string name="trim_silence_header">Trim audio silence</string>
    <string name="sampling_header">Sampling rate:</string>
    <string name="audio_channel_header">Audio channel:</string>
    <string name="start_conversion_button">Start conversion</string>
    <string name="audio_quality_header">Audio quality:</string>
    <string name="video_quality_header">Video quality:</string>
    <string name="open_github">Open Github</string>
    <string name="open_translate_page">Open Translate page</string>
    <string name="open_github_issues">Open GitHub Issues</string>
    <string name="open_play_store">Open Play Store</string>
    <string name="prompt_device_info_copied">Copied device info to clipboard</string>
    <string name="enter_the_details">Enter the details</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="general">General</string>
    <string name="changelog">Changelog</string>
    <string name="contact_us">Contact us</string>
    <string name="support_development">Support development</string>
    <string name="translate_title">Translate</string>
    <string name="translate_summary">Helps translating Media Converter app to your native language</string>
    <string name="report_bugs_title">Report bugs on Github</string>
    <string name="report_bugs_summary">Open new issue on Github to submit a bug or new feature request, your device info will be copied to clipboard.</string>
    <string name="feedback_title">Feedback by email</string>
    <string name="feedback_summary">If you don\'t have Github account, please click here to send your feedback by email.</string>
    <string name="feature_request">Feature Request</string>
    <string name="bug_report">Bug Report</string>
    <string name="question">Question</string>
    <string name="close">Close</string>
    <string name="header_running_job">Running %s</string>
    <string name="header_preparing_job">Preparing</string>
    <string name="header_ready_job">Ready</string>
    <string name="header_pending_job">Pending</string>
    <string name="header_finished_job">Finished</string>
    <string name="header_convert_to_other_format">Convert to other format</string>
    <string name="header_other_feature">Other features</string>
    <string name="hint_limit_file_select_count">You can\'t select more than %d files</string>
    <string name="short_name_mp3">MP3</string>
    <string name="short_name_aac">AAC</string>
    <string name="short_name_flac">FLAC</string>
    <string name="short_name_opus">OPUS</string>
    <string name="short_name_ogg">OGG</string>
    <string name="short_name_wav">WAV</string>
    <string name="short_name_mp4">MP4</string>
    <string name="label_cut_length">Cut video/audio length</string>
    <string name="label_merge_audio">Merge to single audio file</string>
    <string name="label_merge_video">Merge to single video file</string>
    <string name="label_resize_video">Resize video file</string>
    <string name="label_video_speed">Speeding up/slowing down video</string>
    <string name="message_disallow_change_selected_files">You can\'t change selected files</string>
    <string name="message_please_select_an_option">Please select an option</string>
    <string name="message_please_resolve_conflict">Please resolve conflicted files to continue!</string>
    <string name="title_convert">Convert %s</string>
    <string name="title_configure_output">Configure output files</string>
    <string name="title_create_job_success">Create job success</string>
    <string name="select_at_least_one">You must select at least %d file to choose this option</string>
    <string name="select_at_least_n">You must select at least %d files to choose this option</string>
    <string name="select_at_most_one">You must select at most %d file to choose this option</string>
    <string name="select_at_most_n">You must select at most %d files to choose this option</string>
    <string name="selected_file_one">%d file selected</string>
    <string name="selected_file_n">%d files selected</string>
    <string name="new_job_title">New job</string>
    <string name="tap_again_to_exit">Tap back again to exit</string>
    <string name="hint_quality_level">The higher the value, the better the quality</string>
    <string name="hint_quality_type">Use VBR to get optimized file size</string>
    <string name="hint_compression_level">Lower the compression level reduces the time to convert but generates a larger file size</string>
    <string name="hint_trim_silence">Enable this will remove silence at the start/end of the audio</string>
    <string name="title_category_command_configs">Command Configurations</string>
    <string name="ffmpeg_custom_params">FFMPEG custom params:</string>
    <string name="ffmpeg_custom_params_hint">-codec:a libmp3lame -b:a 128k</string>
    <string name="add_recommended_params">Add recommended params</string>
    <string name="add_recommended_params_hint">-hide_banner -map_metadata 0:g</string>
    <string name="recommend_for_audio">Recommend for audio</string>
    <string name="recommend_for_audio_hint">-map 0:a</string>
    <string name="recommend_for_video">Recommend for video</string>
    <string name="output_muxer">Output Muxer:</string>
    <string name="output_muxer_hint">Default: mp3</string>
    <string name="file_extension">File extension:</string>
    <string name="file_extension_hint">mp3</string>
</resources>