<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragment_convert_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bitrateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/bitrate_header"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerBitrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/cbrBitrate"
            app:layout_constraintBaseline_toBaselineOf="@+id/bitrateHeader"
            app:layout_constraintLeft_toRightOf="@+id/bitrateHeader" />

        <TextView
            android:id="@+id/qualityLevelHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:text="@string/hint_quality_level"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bitrateHeader" />

        <CheckBox
            android:id="@+id/cbTrimSilence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/trim_silence_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qualityLevelHint" />

        <TextView
            android:id="@+id/trimSilenceHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:text="@string/hint_trim_silence"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbTrimSilence" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>